<resources>
    <string name="app_name">Music Player</string>
    <string name="songs">SONGS</string>
    <string name="current_time">current_time</string>
    <string name="_0_00">0:00</string>
    <string name="play" />
    <string name="next" />
    <string name="previous" />
    <string name="Music_icon" />
    <string name="music">MUSIC</string>
    <string name="no_songs_found">NO SONGS FOUND</string>
    <string name="song_logo">song_logo</string>
</resources>