<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/songs"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:background="@drawable/songs_back"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/music"
        android:textColor="#74000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/Music_icon"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/music_logo"
        android:contentDescription="@string/Music_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songs" />

    <ImageView
        android:id="@+id/pause_play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/pause"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/previous"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/ps"
        android:contentDescription="@string/previous"
        app:layout_constraintBottom_toBottomOf="@+id/pause_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pause_play" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/ns"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/pause_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pause_play" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="277dp"
        android:layout_height="24dp"
        android:layout_marginBottom="40dp"
        android:thumbTint="#C4E4E4E4"
        android:progressTint="#C4E4E4E4"
        app:layout_constraintBottom_toTopOf="@+id/pause_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="308dp"
        android:layout_height="34dp"

        android:layout_marginBottom="12dp"

        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:gravity="center|center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="#C4E4E4E4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:text="@string/_0_00"
        android:textColor="#C4E4E4E4"
        app:layout_constraintBottom_toBottomOf="@+id/seek_bar"
        app:layout_constraintEnd_toStartOf="@+id/seek_bar"
        app:layout_constraintTop_toTopOf="@+id/seek_bar" />

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/_0_00"
        android:textColor="#C4E4E4E4"
        app:layout_constraintBottom_toBottomOf="@+id/seek_bar"
        app:layout_constraintStart_toEndOf="@+id/seek_bar"
        app:layout_constraintTop_toTopOf="@+id/seek_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>